Bug #41742  	Falcon REPEATABLE READ does not return repeatable results Suspecting that the recordBitmap gets out of sync with the Record tree, I rearranged Table::insertIntoTree so that;   1) It gets and exclusive or shared lock up front.   2) When deleting a record from the tree, it clears recordBitmap first because      other threads doing fetchNext() will check the recordBitmap first.      We don't want them to find a set bit and then not find the record in the tree.   3) When inserting a record into the tree, it now sets the recordBitmap last,      after assuring that the store() succeeded.   4) If the store of a NULL failed, the recordBitmap is now re-set.      This may be the real cause of the inconsistency.